<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/firstNameSignUp_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:hint="@string/enter_first_name_signup"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/lastNameSignUp_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:hint="@string/enter_last_name_signup"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginTop="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameSignUp_editText"
        />

    <EditText
        android:id="@+id/mobileSignUp_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:hint="@string/enter_mobile_number_signup"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        app:layout_constraintTop_toBottomOf="@id/lastNameSignUp_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/emailSignUp_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email_address_signup"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:layout_marginTop="8sp"
        app:layout_constraintTop_toBottomOf="@id/mobileSignUp_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/passwordSignUp_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:hint="@string/enter_password_signup"
        android:layout_marginTop="8sp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        app:layout_constraintTop_toBottomOf="@id/emailSignUp_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/homeSignUp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_signup"
        android:textStyle="bold"
        android:layout_marginEnd="8sp"
        android:layout_marginTop="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordSignUp_editText"
        />
</androidx.constraintlayout.widget.ConstraintLayout>