<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/emailLogin_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="8sp"
        android:hint="@string/enter_email_address_login"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordLogin_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="8sp"
        android:hint="@string/enter_password_login"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLogin_editText" />

    <Button
        android:id="@+id/signUpLogin_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signup_login"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/signInLogin_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLogin_editText"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        />

    <Button
        android:id="@+id/signInLogin_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signin_login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signUpLogin_button"
        app:layout_constraintTop_toBottomOf="@id/passwordLogin_editText"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
         />

</androidx.constraintlayout.widget.ConstraintLayout>